2010-08-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.45 released.

        * 'Default' items now work for Menus with large
          numbers of choices.

        * 'Default' messaging is better - Users are informed
          when 'Default' selections exist on hidden screens.

        * Press 'q' to quit has been changed to
          Type 'quit' to quit


2010-08-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.44 released.

        * Fixed bug when Selection is set to One

        * Modified to conform to new Net:FullAuto architecture


2010-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.43 released.

        * Added 'Custom' to Net::FullAuto paths


2010-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.42 released.

        * More error handling cleanup for iteraction with
          Net::FullAuto


2010-08-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.41 released.

        * More error handling cleanup for iteraction with
          Net::FullAuto


2010-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.40 released.

        * Fixed Makefile.PL Term::ReadKey dependency


2010-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.39 released.

        * Fixed some deprecated defined(%hash) statements


2010-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.36 released.

        * Changed Terminal size testing code in order to not break
          CPAN testing.


2010-08-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.35 released.

        * Added code to implement 'tosspass' condition for Net::FullAuto


2010-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.34 released.

        * Added test for Term::ReadKey and if found use termheight